# NextLeap_Cursor

./: .gitignore  README.md  package.json  pyproject.toml  render.yaml  requirements.txt  script.md  streamlit_app.py
.streamlit/: secrets.toml.example
Docs/: edge-cases.md  phase-wise-architecture.md  problemstatement.md  stitch-frontend-prompt.md
backend/api/: app.py  routes.py
backend/llm/: __init__.py  adapter_factory.py
backend/repositories/: __init__.py  restaurant_repository.py
backend/services/: __init__.py  recommendation_service.py
backend/telemetry/: __init__.py  metrics.py
common/: __init__.py  api.py  constants.py  restaurant.py  user_preference.py
config/: settings.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/Screens/: README.md
frontend/Screens/crave_discover/: CraveDiscoverApp.tsx  index.ts  types.ts
frontend/Screens/crave_discover/components/: SiteFooter.tsx
frontend/Screens/crave_discover/lib/: api.ts  stitchImageUrls.ts
frontend/Screens/crave_discover/screens/: ErrorScreen.tsx  FindingFlavorScreen.tsx  HomeSearchScreen.tsx  NoResultsScreen.tsx  RecommendationsScreen.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: backendProxy.ts
phase1/: ensure_data.py  ingest.py  locations.py  normalize.py  storage.py
phase2/: __init__.py  api.py  normalize.py  query.py  repository.py  service.py
phase3/: __init__.py  adapters.py  api.py  guardrails.py  prompt.py  query.py  service.py  types.py
phase4/: __init__.py  api.py  formatters.py  observability.py  service.py
(+9 files in other folders)
