[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "restaurant-recommender"
version = "0.1.0"
description = "AI-powered restaurant recommender"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5",
  "pydantic-settings>=2.0",
  "datasets>=2.19",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "groq>=0.11",
  "streamlit>=1.38",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["common", "config", "phase1", "phase2", "phase3", "phase4", "backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
